--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codefish",
+  "name": "abnalyemen",
   "description": "A simple node.js app used in Codeship screencasts.",
   "version": "0.0.1",
   "engines": {
